Revert "Allow validation errrors to insert horizontal spacing, instead of being a fixed object"
This reverts commit 4bac1c93b49cf386d3b05507d441f17c61ab203d.

--- a/client/my-sites/domains/domain-management/style.scss
+++ b/client/my-sites/domains/domain-management/style.scss
@@ -669,8 +669,6 @@ ul.email-forwarding__list {
 }
 
 .add-google-apps__name-fieldsets {
-	margin-top: 20px;
-
 	@include breakpoint( '>660px' ) {
 		display: flex;
 		justify-content: space-between;
@@ -695,7 +693,7 @@ ul.email-forwarding__list {
 			display: flex;
 			flex-direction: column;
 			flex: 1;
-
+			margin-bottom: 10px;
 
 			@include breakpoint( '>480px' ) {
 				flex-direction: row;
@@ -712,6 +710,10 @@ ul.email-forwarding__list {
 				width: 100%;
 			}
 
+		}
+
+		.form-input-validation {
+			padding-bottom: 6px;
 		}
 	}
 
